vim: fix scrolloff at beginning of document

https://bugzilla.gnome.org/show_bug.cgi?id=742767

Signed-off-by: Florian Bäuerle <florian.bae@gmail.com>